# qotd-discord-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  constants.py  db_manager.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tests_output.txt
commands/: config.py  packs.py  questions.py
data/: questions.db
db/: __init__.py  database.py  schema.sql
qotd_bot/: bot.py  db_manager.py
qotd_bot/cogs/: config_cog.py  questions_cog.py  scheduler_cog.py
tests/: test_main.py
