[project]
name = "qotd-discord-bot"
version = "0.1.0"
description = "Discord bot for sending daily/weekly questions to channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.3.1",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.1",
    "aiosqlite>=0.19.0",
]
